--- a/about.html
+++ b/about.html
@@ -959,31 +959,45 @@
       document.addEventListener("DOMContentLoaded", () => {
         gsap.registerPlugin(ScrollTrigger);
 
-        // 1️⃣ Animate each phrase on scroll (snap into place)
         const items = gsap.utils.toArray("#valuesList li");
+
+        // Fade-in/out one line at a time
         items.forEach((item, i) => {
-          ScrollTrigger.create({
-            trigger: item,
-            start: "top center",
-            end: "bottom center",
-            onEnter: () => setActive(i),
-            onEnterBack: () => setActive(i),
-          });
+          gsap.fromTo(
+            item,
+            { opacity: 0, y: 50 },
+            {
+              opacity: 1,
+              y: 0,
+              duration: 0.5,
+              scrollTrigger: {
+                trigger: item,
+                start: "top center",
+                end: "bottom center",
+                scrub: true,
+                onEnter: () => showOnly(i),
+                onEnterBack: () => showOnly(i),
+              },
+            }
+          );
         });
 
-        function setActive(i) {
-          items.forEach((el, idx) => {
-            el.classList.toggle("active", idx === i);
+        function showOnly(index) {
+          items.forEach((el, i) => {
+            gsap.to(el, { opacity: i === index ? 1 : 0, duration: 0.4 });
           });
         }
 
-        // 2️⃣ Fade in / scale up image after last value
+        // Image grows from center to full screen after last value
+        const img = document.querySelector(".we-are-cw .image");
+        const heading = img.querySelector("h2");
+
         gsap.fromTo(
-          ".we-are-cw .image",
-          { opacity: 0, scale: 0.5 },
+          img,
+          { scale: 0.2, opacity: 0 },
           {
-            opacity: 1,
             scale: 1,
+            opacity: 1,
             ease: "power2.out",
             scrollTrigger: {
               trigger: "#lastValue",
@@ -994,15 +1008,40 @@
             },
           }
         );
+
+        // Heading fades in after the image fills the screen
+        gsap.fromTo(
+          heading,
+          { opacity: 0, y: 30 },
+          {
+            opacity: 1,
+            y: 0,
+            duration: 1,
+            ease: "power2.out",
+            scrollTrigger: {
+              trigger: img,
+              start: "top center",
+              end: "bottom center",
+              scrub: true,
+            },
+          }
+        );
       });
     </script>
+
     <style>
-      .values-list li {
-        opacity: 0.2;
-        transition: opacity 0.3s ease;
+      .values-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
       }
-      .values-list li.active {
-        opacity: 1;
+      .values-list li {
+        opacity: 0;
+        font-weight: 800;
+        font-size: clamp(2rem, 5vw, 4rem);
+        line-height: 1.1;
+        text-align: left;
+        transform: translateY(30px);
       }
 
       .we-are-cw {
@@ -1017,11 +1056,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        transform-origin: center center;
+        opacity: 0;
       }
       .we-are-cw .image h2 {
         font-size: clamp(2rem, 5vw, 4rem);
         color: white;
         text-align: center;
+        opacity: 0;
       }
     </style>
   </body>
